--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -13,6 +13,7 @@ jobs:
       - name: Running node version
         run: node --version
 
-      - name: Running npm run build
+      - name: Installting npm and Running npm run build
+        run: npm install
         run: npm run build
 
