--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -13,7 +13,9 @@ jobs:
       - name: Running node version
         run: node --version
 
-      - name: Installting npm and Running npm run build
+      - name: Installting npm 
         run: npm install
+
+      - name: Running npm run build
         run: npm run build
 
